agregando fondo de pantalla

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+     
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
@@ -31,13 +32,29 @@
             <a class="nav-link" href="#">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">CV</a>
+            <a class="nav-link" href="./assets/CV OGCM.pdf">CV</a>
           </li>
         </ul>
       </div>
     </nav>
     <section id="aboutme">
-      <h1>hola</h1>
+      <div id="aboutme2" class="card mb-3" style="max-width: 540px;">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="./assets/MyPhoto.PNG" class="card-img" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">About Me</h5>
+        <p class="card-text">Front-End Developer, estudiante de Laboratoria. Interesada en crear, innovar y mejorar proyectos
+            tecnológicos; comprometida con mi trabajo y responsabilidades, creo en la evolución continua del
+            aprendizaje y en el trabajo en equipo.
+            </p>
+        
+      </div>
+    </div>
+  </div>
+</div>
     </section>
    <div id="proyectos">
    <div class="card-deck">
@@ -81,7 +98,8 @@
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">Md-links</h5>
-              <p class="card-text">El objetivo de esta librería es validar los links encontrados en un archivo o archivos .md y obtener estadísticas de los mismos. </p>
+              <p class="card-text">El objetivo de esta librería es validar los links encontrados en un archivo o archivos .md y obtener estadísticas de los mismos.
+                La instalación se realiza con el comando npm mdlink-sogcm por medio de la terminal. </p>
               <a href="https://github.com/OlgaContreras911/CDMX007-fe-md-links" class="card-link btn btn-primary">PROYECTO</a>
               <a href="https://www.npmjs.com/package/mdlink-sogcm" class="card-link btn btn-primary">DEMO</a>
             </div>
@@ -89,6 +107,8 @@
         </div>
       </div>
 </div>
+
+
 
      <!-- <div class="card-deck">
         <div class="card">
