se agregan cambios al CV

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li class="nav-item">
             <a
               class="nav-link p-2 flex-grow-1 bd-highlight text-whitenav"
-              href="./assets/CV OGCM.pdf" target="_blank"
+              href="./assets/CVOGCM.pdf" target="_blank"
               >CV</a
             >
           </li>
@@ -133,7 +133,7 @@
               />
             </div>
             <div class="col-md-8">
-              <div class="card-body">
+              <div class="card-body size-body">
                 <h5 class="card-title">Social Learning</h5>
                 <p class="card-text">
                   Social Learning es una aplicación pensada como una Red Social para compartir
@@ -234,8 +234,8 @@
       </section>
       
     <section class=" color-purpule"  id="contacto">
-          <h1 class="title">Contacto</h1>
-          <div class="container pb-4">
+          <h1 class="title contact-h1">Contacto</h1>
+          <div class="container pb-4 contact-container">
               <div class="row">
                 <div class="col-sm text-whitenav">
                     <a href="https://github.com/OlgaContreras911" class="text-whitenav" target="_blank"
@@ -247,16 +247,16 @@
                 </div>
                 <div class="col-sm text-whitenav">
                     <a href="mailto:olga.contreras9112@gmail.com" class="text-whitenav" target="_blank"
-                    title="E-mail"><img src="./assets/mail.png" alt="">E-mail</a>  
+                    title="E-mail"><img src="./assets/mail.png" alt=""> E-mail</a>  
                 </div>
                 <div class="col-sm text-whitenav">
                     <a href="tel:+525510316021"class="text-whitenav" target="_blank"
-                    title="Teléfono"><img src="./assets/phone-call.png" alt="">Teléfono</a>
+                    title="Teléfono"><img src="./assets/phone-call.png" alt=""> Teléfono</a>
                 </div>
                 <div class="col-sm text-whitenav">
                     <a href="https://www.google.com/maps/place/Roma+Nte.,+06700+Ciudad+de+M%C3%A9xico,+CDMX/@19.4181527,-99.1739561,15z/data=!3m1!4b1!4m5!3m4!1s0x85d1ff39f2a2e4cd:0x2d9a33e867c32532!8m2!3d19.4195256!4d-99.162549"
                   class="text-whitenav" target="_blank"
-                  title="Ubicación"><img src="./assets/pin.png" alt="">Ubicación</a>   
+                  title="Ubicación"><img src="./assets/pin.png" alt=""> Ciudad de México</a>   
                 </div>
               </div>
             </div>
