se agrega icono personalizado

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/LOGOGCM.ico" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -11,7 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <title>Portafolio</title>
+    <title>Portafolio Olga Contreras</title>
   </head>
 
   <body >
@@ -20,7 +21,7 @@
       class="d-flex bd-highlight navbar navbar-expand-lg navbar-light fixed-top color-purpule"
     >
       <a class="p-2 flex-grow-1 bd-highlight navbar-brand text-whitenav" href="#"
-        >OGCM</a
+        ><img src="./assets/logo.png" alt="">Olga Contreras</a
       >
       <button
         class="navbar-toggler text-whitenav"
@@ -171,12 +172,12 @@
                 </p>
                 <a
                   href="https://github.com/OlgaContreras911/CDMX007-fe-md-links" target="_blank"
-                  class="card-link btn btn-primary"
+                  class="card-link btn btn-primary color-button"
                   >PROYECTO</a
                 >
                 <a
                   href="https://www.npmjs.com/package/mdlink-sogcm" target="_blank"
-                  class="card-link btn btn-primary"
+                  class="card-link btn btn-primary color-button"
                   >DEMO</a
                 >
               </div>
