--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
             <div class="col col-size">
               <img class= "img-back" src="./assets/github-sign.png" alt="">
             </div>
+            <div class="col col-size">
+              <img class= "img-back" src="./assets/bootstrap.png" alt="">
+            </div>
           </div>
           <div class="row">
               <div class="col col-size">
@@ -235,6 +238,7 @@
                 <div class="col col-size">
                   <img class= "img-back" src="./assets/rsz_mat.png" alt="">
                 </div>
+                
           </div>
           
         </div>
