cambiando color de fondo

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               <img class= "img-back" src="./assets/github-sign.png" alt="">
             </div>
             <div class="col col-size">
-              <img class= "img-back" src="./assets/bootstrap.png" alt="">
+              <img class= "img-back" src="./assets/bootstrap (3).png" alt="">
             </div>
           </div>
           <div class="row">
