--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div id="aboutme2" class="card mb-3 text-center card-about"  >
           <div class="row no-gutters">
             <div class="col-md-4">
-              <img src="./assets/MyPhoto.PNG" class="card-img image-about" alt="..." />
+              <img src="./assets/Olga Contreras.jpg" class="card-img image-about" alt="..." />
             </div>
             <div class="col-md-8">
               <div class="card-body text-about">
