adding changes on about me section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h5 class="card-title title-about">Sobre mí
                 </h5>
                 <p class="card-text">
-                  Front-End Developer, estudiante de Laboratoria. Interesada en
+                  Front-End Developer, egresada de Laboratoria. Interesada en
                   crear, innovar y mejorar proyectos tecnológicos; comprometida
                   con mi trabajo y responsabilidades, creo en la evolución
                   continua del aprendizaje y en el trabajo en equipo. Dentro de
