--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             >
           </li>
           <li class="nav-item active text-left">
-              <a  id="en" class="nav-link text-whitenav" 
+              <a href="#"  id="en" class="nav-link text-whitenav" 
                 >EN<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item active text-left">
-                <a id="es"  class="nav-link text-whitenav" 
+                <a href="#" id="es"  class="nav-link text-whitenav" 
                   >ES<span class="sr-only">(current)</span></a
                 >
               </li>
